# SD-TagFilter

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: example.py  sample_config.json  sample_config.yaml  sample_filters.txt  text_config_example.py
sd_tagfilter/: __init__.py  base.py  config.py  engine.py  filters.py  patterns.py
tests/: test_base.py  test_filter.py  test_integration.py  test_json_config.py  test_text_config.py  test_yaml_config.py
